[tool.poetry]
name = "lsnms"
version = "0.4.4"
description = "Large Scale Non Maximum Suppression"
authors = ["Rémy Dubois <remydubois14@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/remydubois/lsnms"
keywords = ["NMS", "Non Maximum Suppression", "Histology image", "Satellite images", "Object detection"]
classifiers=["Programming Language :: Python :: 3", "Topic :: Scientific/Engineering"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.24"
numba = "^0.57.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pillow = "^10.0.0"
torch = "2.0.0"
torchvision = "0.15.1"
pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=30.3.0,<50",]
build-backend = "poetry.core.masonry.api"
